feat(workspaces): transfer ownership atomically
